<?xml version="1.0"?>
<package format="2">
  <name>move_base_interpolate</name>
  <version>0.0.0</version>
  <description>A simple move_base implementation without any planning. It requires an obstical free safe driving area.</description>

  <maintainer email="4jtietz@nformatik.uni-hamburg.de">Jonas Tietz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</build_depend>
  <depend>tf</build_depend>
</package>
